--- a/.hydra/config.yaml
+++ b/.hydra/config.yaml
@@ -1,20 +1,30 @@
 model:
-  name: hard_sharing
+  name: ts_diff
   params:
     hf_input_dim: 3
     lf_input_dim: 1
     lf_output_dim: 1
     hidden_dim: 64
-    num_layers: 2
+    num_layers: 3
     dropout: 0.2
 trainer:
-  name: gradient_balancing_trainer
+  name: ts_diff_trainer
   params:
     learning_rate: 0.001
     grad_clip: 1.0
     device: cpu
+    time_emb_dim: 128
+diffusion:
+  num_timesteps: 1000
+  beta_start: 0.0001
+  beta_end: 0.02
 train:
   epochs: 30
+  eval_horizons:
+  - 1
+  - 3
+  - 6
+  - 12
 data:
   base_path: src/TS_MTL/data/air_quality
   sites:
