--- a/.hydra/hydra.yaml
+++ b/.hydra/hydra.yaml
@@ -113,14 +113,16 @@ hydra:
     - hydra.run.dir=.
     - hydra.mode=RUN
     task:
-    - model.name=hard_sharing
-    - model.params.hf_input_dim=3
-    - model.params.lf_input_dim=1
-    - model.params.lf_output_dim=1
+    - model.name=ts_diff
     - model.params.hidden_dim=64
-    - trainer.name=gradient_balancing_trainer
+    - model.params.num_layers=3
+    - trainer.name=ts_diff_trainer
     - trainer.params.learning_rate=0.001
     - trainer.params.device=cpu
+    - trainer.params.time_emb_dim=128
+    - diffusion.num_timesteps=1000
+    - diffusion.beta_start=0.0001
+    - diffusion.beta_end=0.02
     - data.base_path=src/TS_MTL/data/air_quality
     - data.sites=[station-1,station-2,station-3,station-4,station-5,station-6]
     - data.hf_suffix=-hf.csv
@@ -129,11 +131,18 @@ hydra:
     - data.target=[CO]
     - data.min_date=2014-09-01
     - data.max_date=2014-11-12
+    - data.hf_lookback=64
+    - data.lf_lookback=32
+    - data.forecast_horizon=1
+    - data.freq_ratio=2
+    - data.batch_size=16
+    - data.train_ratio=0.8
     - train.epochs=30
+    - train.eval_horizons=[1,3,6,12]
   job:
     name: cli
     chdir: null
-    override_dirname: data.base_path=src/TS_MTL/data/air_quality,data.features=[PM2.5,NO2,PM10],data.hf_suffix=-hf.csv,data.lf_suffix=-lf.csv,data.max_date=2014-11-12,data.min_date=2014-09-01,data.sites=[station-1,station-2,station-3,station-4,station-5,station-6],data.target=[CO],model.name=hard_sharing,model.params.hf_input_dim=3,model.params.hidden_dim=64,model.params.lf_input_dim=1,model.params.lf_output_dim=1,train.epochs=30,trainer.name=gradient_balancing_trainer,trainer.params.device=cpu,trainer.params.learning_rate=0.001
+    override_dirname: data.base_path=src/TS_MTL/data/air_quality,data.batch_size=16,data.features=[PM2.5,NO2,PM10],data.forecast_horizon=1,data.freq_ratio=2,data.hf_lookback=64,data.hf_suffix=-hf.csv,data.lf_lookback=32,data.lf_suffix=-lf.csv,data.max_date=2014-11-12,data.min_date=2014-09-01,data.sites=[station-1,station-2,station-3,station-4,station-5,station-6],data.target=[CO],data.train_ratio=0.8,diffusion.beta_end=0.02,diffusion.beta_start=0.0001,diffusion.num_timesteps=1000,model.name=ts_diff,model.params.hidden_dim=64,model.params.num_layers=3,train.epochs=30,train.eval_horizons=[1,3,6,12],trainer.name=ts_diff_trainer,trainer.params.device=cpu,trainer.params.learning_rate=0.001,trainer.params.time_emb_dim=128
     id: ???
     num: ???
     config_name: default
