Add ts_diff.py and ts_mtl.py model files and fix .gitignore to not ignore source code

--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ mixed_freq_data/
 # *.tsv
 
 # Model artifacts and results
-models/
+# models/  # Don't ignore the source code models directory
 *.pt
 *.pth
 results/
