--- a/.hydra/config.yaml
+++ b/.hydra/config.yaml
@@ -1,30 +1,41 @@
+federated: true
+secured: false
 model:
-  name: ts_diff
+  name: hard_sharing
   params:
     hf_input_dim: 3
     lf_input_dim: 1
     lf_output_dim: 1
     hidden_dim: 64
-    num_layers: 3
+    num_layers: 2
     dropout: 0.2
 trainer:
-  name: ts_diff_trainer
+  name: secured_fedavg
   params:
     learning_rate: 0.001
     grad_clip: 1.0
     device: cpu
     time_emb_dim: 128
+    personalization_lr: 0.0001
+    local_epochs: 5
+    personalization_epochs: 3
+    meta_learning_rate: 0.01
+    noise_scale: 0.1
+    clip_norm: 1.0
+    encoder_noise_scale: 0.05
+    enable_secure_agg: true
 diffusion:
-  num_timesteps: 1000
+  num_timesteps: 100
   beta_start: 0.0001
-  beta_end: 0.02
+  beta_end: 0.1
 train:
-  epochs: 1
+  epochs: 5
   eval_horizons:
   - 1
-  - 3
-  - 6
-  - 12
+  - 2
+  - 4
+  - 8
+  - 16
 data:
   base_path: src/TS_MTL/data/air_quality
   sites:
@@ -44,9 +55,9 @@ data:
   - CO
   min_date: '2014-09-01'
   max_date: '2014-11-12'
-  hf_lookback: 64
+  hf_lookback: 128
   lf_lookback: 32
-  forecast_horizon: 1
-  freq_ratio: 2
+  forecast_horizon: 16
+  freq_ratio: 4
   batch_size: 16
   train_ratio: 0.8
