--- a/.hydra/overrides.yaml
+++ b/.hydra/overrides.yaml
@@ -1,13 +1,17 @@
-- model.name=ts_diff
-- model.params.hidden_dim=64
-- model.params.num_layers=3
-- trainer.name=ts_diff_trainer
+- federated=true
+- trainer.name=secured_fedavg
 - trainer.params.learning_rate=0.001
+- trainer.params.personalization_lr=0.0001
+- trainer.params.local_epochs=5
+- trainer.params.personalization_epochs=3
+- trainer.params.noise_scale=0.1
+- trainer.params.clip_norm=1.0
+- trainer.params.encoder_noise_scale=0.05
+- trainer.params.enable_secure_agg=true
 - trainer.params.device=cpu
-- trainer.params.time_emb_dim=128
-- diffusion.num_timesteps=1000
-- diffusion.beta_start=0.0001
-- diffusion.beta_end=0.02
+- model.params.hidden_dim=64
+- model.params.num_layers=2
+- model.params.dropout=0.2
 - data.base_path=src/TS_MTL/data/air_quality
 - data.sites=[station-1,station-2,station-3,station-4,station-5,station-6]
 - data.hf_suffix=-hf.csv
@@ -16,11 +20,10 @@
 - data.target=[CO]
 - data.min_date=2014-09-01
 - data.max_date=2014-11-12
-- data.hf_lookback=64
-- data.lf_lookback=32
-- data.forecast_horizon=1
-- data.freq_ratio=2
 - data.batch_size=16
+- data.hf_lookback=128
+- data.lf_lookback=32
+- data.forecast_horizon=16
+- data.freq_ratio=4
 - data.train_ratio=0.8
-- train.epochs=1
-- train.eval_horizons=[1,3,6,12]
+- train.epochs=5
