--- a/.hydra/config.yaml
+++ b/.hydra/config.yaml
@@ -10,7 +10,7 @@ model:
     num_layers: 2
     dropout: 0.2
 trainer:
-  name: secured_fedavg
+  name: secured_fedprox
   params:
     learning_rate: 0.001
     grad_clip: 1.0
@@ -24,6 +24,7 @@ trainer:
     clip_norm: 1.0
     encoder_noise_scale: 0.05
     enable_secure_agg: true
+    fedprox_mu: 0.01
 diffusion:
   num_timesteps: 100
   beta_start: 0.0001
